stretch added position to be fixed and opacity to the nav bar

--- a/css/index.css
+++ b/css/index.css
@@ -177,6 +177,8 @@ p {
   justify-content: space-evenly;
   height: 100px;
   padding: 0 15%;
+  position: fixed;
+  opacity: 0.5;
 }
 @media (max-width:500px) {
   .nav-container {
@@ -280,6 +282,7 @@ footer {
   align-items: center;
   height: 30px;
   width: 100px;
+  cursor: pointer;
   border-radius: 5px;
   font-size: 18px;
   color: white;
@@ -291,8 +294,20 @@ footer {
 }
 @media (max-width:500px) {
   .home .walk .walk-text .btn {
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 60px;
+    width: 100%;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 18px;
+    color: white;
+    background-color: black;
+  }
+  .home .walk .walk-text .btn:hover {
+    color: black;
+    background-color: white;
   }
 }
 .home .walk .walk-img {
