--- a/less/home-page.less
+++ b/less/home-page.less
@@ -78,27 +78,9 @@
 
       .btn {
         .custom_btn(100px,30px);
-        // display: flex;
-        // justify-content: center;
-        // align-items: center;
-        // height: 30px;
-        // width:100px;
-        
-        // border-radius: 5px;
-        // font-size: 18px;
-        // color: white;
-        // background-color:black;
-
-        // &:hover{
-        //   color: black;
-        //   background-color:white;
-        }
 
         @media @phone{
           .custom_btn(100%,60px);
-          // width:100%;
-          // height:60px;
-        }
       }
     }
 
@@ -107,7 +89,6 @@
       margin-left: 4%;
 
       @media @phone{
-        // padding:0 3%;
         margin-bottom: 15px;
         margin-left:0px;
         width:100%;
@@ -139,9 +120,6 @@
 }
 
 @media @phone{
-  // .space-images{
-  //   width:100%;
-
     .blast{
       width:100%;
     }
